Modified the dataset used, and added some code.

--- a/15-microbiome-community.Rmd
+++ b/15-microbiome-community.Rmd
@@ -5,6 +5,11 @@ library(rebook)
 chapterPreamble()
 ```
 
+```{r load-pkg-data}
+library(mia)
+data("GlobalPatterns")
+tse <- GlobalPatterns
+```
 
 
 ## Community composition
@@ -29,9 +34,10 @@ reflect the probability that a sample belongs to the given cluster.
 Let's cluster the data with DMM clustering. 
 
 ```{r dmm}
-# Runs model and calculates the most likely number of clusters from 1 to 7. 
-# For this small data, takes about 10 seconds. For larger data, can take much longer
-# because this demands lots of resources. 
+# Runs model and calculates the most likely number of clusters from 1 to 7.
+# Since this is a large dataset it takes long computational time.
+# For this reason we use only a subset of the data; agglomerated by Phylum as a rank.
+tse <- agglomerateByRank(tse, rank = "Phylum", agglomerateTree=TRUE)
 tse_dmn <- runDMN(tse, name = "DMN", k = 1:7)
 ```
 
@@ -56,6 +62,7 @@ getDMN(tse_dmn)
 Show Laplace approximation (model evidence) for each model of the k models.
 
 ```{r}
+library(miaViz)
 plotDMNFit(tse_dmn, type = "laplace")
 ```
 
@@ -70,8 +77,8 @@ Group samples and return DMNGroup object that contains a summary.
 Patient status is used for grouping.
 
 ```{r}
-dmn_group <- calculateDMNgroup(tse_dmn, variable = "patient_status", 
-                             exprs_values = "counts", k = 3)
+dmn_group <- calculateDMNgroup(tse_dmn, variable = "SampleType",  exprs_values = "counts",
+                               k = 2)
 
 dmn_group
 ```
@@ -96,22 +103,49 @@ Contribution of each taxa to each component
 ```{r}
 head(DirichletMultinomial::fitted(getBestDMNFit(tse_dmn)))
 ```
-
 Get the assignment probabilities
+
 
 ```{r}
 prob <- DirichletMultinomial::mixture(getBestDMNFit(tse_dmn))
 # Add column names
-colnames(prob) <- c("comp1", "comp2", "comp3")
+colnames(prob) <- c("comp1", "comp2")
 
 # For each row, finds column that has the highest value. Then extract the column 
 # names of highest values.
 vec <- colnames(prob)[max.col(prob,ties.method = "first")]
 
+```
+
+Computing the euclidean PCoA and storing it as dataframe
+
+```{r}
+# Does clr transformation. Pseudocount is added, because data contains zeros.
+tse <- transformCounts(tse, method = "clr", pseudocount = 1)
+
+# Gets clr table
+clr_assay <- assays(tse)$clr
+
+# Transposes it to get taxa to columns
+clr_assay <- t(clr_assay)
+
+# Calculates Euclidean distances between samples. Because taxa is in columns,
+# it is used to compare different samples.
+euclidean_dist <- vegan::vegdist(clr_assay, method = "euclidean")
+
+# Does principal coordinate analysis
+euclidean_pcoa <- ecodist::pco(euclidean_dist)
+
+# Creates a data frame from principal coordinates
+euclidean_pcoa_df <- data.frame(pcoa1 = euclidean_pcoa$vectors[,1], 
+                                pcoa2 = euclidean_pcoa$vectors[,2])
+
+```
+
+```{r}
 # Creates a data frame that contains principal coordinates and DMM information
 euclidean_dmm_pcoa_df <- cbind(euclidean_pcoa_df,
                                dmm_component = vec)
-
 # Creates a plot
 euclidean_dmm_plot <- ggplot(data = euclidean_dmm_pcoa_df, 
                              aes(x=pcoa1, y=pcoa2,
