--- a/15-microbiome-community.Rmd
+++ b/15-microbiome-community.Rmd
@@ -78,7 +78,7 @@ Patient status is used for grouping.
 
 ```{r}
 dmn_group <- calculateDMNgroup(tse_dmn, variable = "SampleType",  exprs_values = "counts",
-                               k = 2)
+                               k = 2, seed=.Machine$integer.max)
 
 dmn_group
 ```
@@ -117,7 +117,7 @@ vec <- colnames(prob)[max.col(prob,ties.method = "first")]
 
 ```
 
-Computing the euclidean PCoA and storing it as dataframe
+Computing the euclidean PCoA and storing it as a dataframe
 
 ```{r}
 # Does clr transformation. Pseudocount is added, because data contains zeros.
