agglomerateByRank warning off.

--- a/15-microbiome-community.Rmd
+++ b/15-microbiome-community.Rmd
@@ -33,7 +33,7 @@ reflect the probability that a sample belongs to the given cluster.
 
 Let's cluster the data with DMM clustering. 
 
-```{r dmm}
+```{r dmm, warning=FALSE}
 # Runs model and calculates the most likely number of clusters from 1 to 7.
 # Since this is a large dataset it takes long computational time.
 # For this reason we use only a subset of the data; agglomerated by Phylum as a rank.
