--- a/15-microbiome-community.Rmd
+++ b/15-microbiome-community.Rmd
@@ -3,6 +3,10 @@
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
 chapterPreamble()
+if(!require(ecodist)){
+    install.packages("ecodist")
+    library(ecodist)
+}
 ```
 
 ```{r load-pkg-data}
