--- a/14-microbiome-diversity.Rmd
+++ b/14-microbiome-diversity.Rmd
@@ -387,6 +387,7 @@ if (!require(curatedMetagenomicData)){
 Retrieving data as a TreeSummarizedExperiment object.
 
 ```{r, message=FALSE, warning=FALSE}
+library(curatedMetagenomicData)
 library(dplyr)
 library(DT)
 # Querying the data
