Additional reading; issue #35

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -412,6 +412,61 @@ molten_se
 
 Some wrapping up...
 
+## Additional Reading
+
+### Lecture slides
+
+Introduction to microbiome data science [lecture slides](https://github.com/microbiome/course_2021_radboud/tree/main/slides).
+
+### R programming resources
+
+ * R programming basics: [Base R](https://www.rstudio.com/wp-content/uploads/2016/10/r-cheat-sheet-3.pdf)
+ * Basics of R programming: [Base R](https://raw.githubusercontent.com/rstudio/cheatsheets/master/base-r.pdf)
+ * [R cheat sheets](https://www.rstudio.com/resources/cheatsheets/)
+ * R visualization with [ggplot2](https://www.rstudio.com/wp-content/uploads/2016/11/ggplot2-cheatsheet-2.1.pdf) 
+ * [R graphics cookbook](http://www.cookbook-r.com/Graphs/)
+
+Rmarkdown
+
+* [Rmarkdown tips](https://rmarkdown.rstudio.com/)
+
+
+RStudio
+
+* [RStudio cheat sheet](https://www.rstudio.com/wp-content/uploads/2016/01/rstudio-IDE-cheatsheet.pdf) 
+
+### Resources for TreeSummarizedExperiment
+
+ * SingleCellExperiment
+   + [Publication](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html)
+   + [Project page](https://bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html)
+ * SummarizedExperiment
+   + [Publication](https://bioconductor.org/packages/release/bioc/vignettes/SummarizedExperiment/inst/doc/SummarizedExperiment.html)
+   + [Project page](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)
+ * TreeSummarizedExperiment
+   + [Publication](https://f1000research.com/articles/9-1246)
+   + [Project page](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)
+   
+### Resources for phyloseq
+
+ * [List of R tools for microbiome analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)
+ * [phyloseq](http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0061217)
+ * [microbiome tutorial](http://microbiome.github.io/tutorials/)
+ * [microbiomeutilities](https://microsud.github.io/microbiomeutilities/)
+ * Bioconductor Workflow for Microbiome Data Analysis: from raw reads to community analyses ([Callahan et al. F1000, 2016](https://f1000research.com/articles/5-1492/v2)).
+
+
+
+
+### Further reading
+
+
+* [Data Analysis and Visualization in R for Ecologists](https://datacarpentry.org/R-ecology-lesson/) by Data Carpentry
+
+* [Modern Statistics for Modern Biology. Holmes & Huber (2018)](http://web.stanford.edu/class/bios221/book/) for background in statistical analysis
+
+* [Microbiome Data Science. Shetty & Lahti, 2019](https://openresearchlabs.github.io/publications/papers/2018-Shetty-Lahti-MDS.pdf)
+
 ## Session Info {-}
 
 ```{r sessionInfo, echo=FALSE, results='asis'}
