Removed unnecessary info, log10 --> clr

--- a/11-taxonomic-information.Rmd
+++ b/11-taxonomic-information.Rmd
@@ -171,43 +171,14 @@ abundance table is stored back to 'assays'. mia includes transformation
 functions for sample-wise or column-wise transformation ('transformSamples()'), 
 and for feature-wise or row-wise transformation ('transformFeatures()'). 
 
-'transformSamples' includes following transformation methods:
-
--   centered log ratio transformation (clr)
--   hellinger (hellinger)
--   log10 (log10)
--   presence/absence (pa)
--   rank (rank)
--   relative (relabundance)
-
-'transformFeatures' includes following transformation methods:
-
--   log10 (log10)
--   presence/absence (pa)
--   Z-standardization (z)
-
-
-Following prameters are used as an input: 
-
--   'x' is a SummarizedExperiment object
-
--   'abund_values' specifies the abundance table where transformation is applied.
-
--   'method' specifies the transformation method that is used. By default, 
-transformation is applied to 'counts' table.
-
--   'pseudocount' specifies the value that is added to data. It must be added when
-logarithmic transformation is done (clr, hellinger, log10), and the data 
-contains zeros.
-
--   'name' specifies the name of transformed abundance table. It is optional, but it
-is preferred. By default, name is same as the method that is used.
+For complete list of available transformations and parameters, see function 
+[help](https://microbiome.github.io/mia/reference/transformCounts.html).
 
 ```{r}
-se <- transformSamples(x = se, abund_values = "counts", method = "log10", 
-                       pseudocount = 1, name = "log10_transformation")
+se <- transformSamples(x = se, abund_values = "counts", method = "clr", 
+                       pseudocount = 1, name = "clr_transformation")
 
-head(assay(se, "log10_transformation"))
+head(assay(se, "clr_transformation"))
 ```
 
 -   In 'pa' transformation, 'threshold' specifies the value that divides observations to
@@ -220,7 +191,7 @@ head(assay(se, "pa"))
 ```
 
 ```{r}
-# list of abundance tables hat assays slot contains
+# list of abundance tables that assays slot contains
 assays(se)
 ```
 
