Adding library import.

--- a/14b_beta_diversity.Rmd
+++ b/14b_beta_diversity.Rmd
@@ -72,6 +72,7 @@ lab](https://www.huber.embl.de/users/klaus/Teaching/statisticalMethods-lab.pdf).
 
 ```{r relstress}
 # Example data
+library(mia)
 data(GlobalPatterns)
 
 # Data matrix (features x samples)
