Adding missing libraries.

--- a/14b_beta_diversity.Rmd
+++ b/14b_beta_diversity.Rmd
@@ -129,6 +129,8 @@ This entire process is wrapped in the `runMDS` and `runNMDS`
 functions.
 
 ```{r runMDS, message=FALSE}
+library(scater)
+se <- GlobalPatterns
 se <- runMDS(se, FUN = vegan::vegdist, name = "MDS_BC", exprs_values = "counts")
 ```
 
