--- a/12-quality-control.Rmd
+++ b/12-quality-control.Rmd
@@ -36,7 +36,23 @@ se <- addPerCellQC(se)
 colData(se)
 ```
 
-The calulated library sizes can be visualized using the `plotColData` function.
+The distribution of calculated library sizes can be visualized as a histogram.
+
+```{r plot-viz-lib-size-1, fig.width=8, fig.height=4, fig.cap="Library size distribution."}
+library(ggplot2)
+ggplot(as.data.frame(colData(se))) +
+    geom_histogram(aes(x = sum), color = "black", fill = "gray", bins = 30) +
+    labs(x = "Library size", y = "Frequency") +
+    theme_bw() +
+    theme(panel.grid.major = element_blank(), # Removes the grid
+          panel.grid.minor = element_blank(),
+          panel.border = element_blank(),
+          panel.background = element_blank(),
+          axis.line = element_line(colour = "black")) # Adds y-axis
+```
+
+Library sizes - and other variables from `colData` - can be also visualized by using 
+specified function called `plotColData`.
 
 ```{r plot-viz-lib-size-1, fig.width=8, fig.height=4, fig.cap="Library sizes per sample."}
 library(ggplot2)
