--- a/15-microbiome-community.Rmd
+++ b/15-microbiome-community.Rmd
@@ -15,10 +15,26 @@ data("GlobalPatterns")
 tse <- GlobalPatterns
 ```
 
-
 ## Community composition
 
-Heatmaps
+Community composition can be visualized with heatmap where other axis represent
+samples and another taxa. Color of each intersection point represent abundance
+of a taxon in a specific sample. 
+
+Here, clr (center log ratio) transformed abundances are plotted at Phylum level. 
+
+```{r heatmap}
+tse_phylum <- agglomerateByRank(tse, rank = "Phylum")
+tse_phylum <- transformSamples(tse_phylum, method = "clr", pseudocount = 1)
+df <- meltAssay(tse_phylum, assay_name = "clr")
+
+ggplot(df, aes(x = SampleID, y = FeatureID, fill = clr)) +
+    geom_tile() +
+    scale_fill_gradient(low = "blue", high = "red") + 
+    theme(text = element_text(size=6),
+          axis.text.x = element_text(angle=45, hjust=1)) +
+  labs(x = "Samples", y = "Taxa")
+```
 
 ### Composition barplot
 
