--- a/15-microbiome-community.Rmd
+++ b/15-microbiome-community.Rmd
@@ -24,6 +24,7 @@ of a taxon in a specific sample.
 Here, clr (center log ratio) transformed abundances are plotted at Phylum level. 
 
 ```{r heatmap}
+library(ggplot2)
 tse_phylum <- agglomerateByRank(tse, rank = "Phylum")
 tse_phylum <- transformSamples(tse_phylum, method = "clr", pseudocount = 1)
 df <- meltAssay(tse_phylum, assay_name = "clr")
