Adding link and renaming files.

--- a/14b_beta_diversity.Rmd
+++ b/14b_beta_diversity.Rmd
@@ -283,6 +283,8 @@ plot <-plotReducedDim(tse_Genus,"PCoA_BC", colour_by = "most_abundant") +
 plot
 ```
 
+Note: A 3D interactive version of the earlier plot can be found at [link](https://microbiome.github.io/OMA/interactive_3d_plots.html).
+
 Similarly lets visualize and compare the alcohol sub-polulation.
 ```{r}
 # Calculating the frequencies and percentages for both categories
