Adding missing package

--- a/interactive_3d_plots.Rmd
+++ b/interactive_3d_plots.Rmd
@@ -3,6 +3,13 @@ title: Interactive 3D plots
 output: html_document
 ---
 
+```{r, message=FALSE, warning=FALSE}
+# Installing the package
+if (!require(rgl)){
+  BiocManager::install("rgl")  
+}
+```
+
 ```{r, setup, warning=FALSE, message=FALSE}
 library(knitr)
 library(rgl)
