--- a/interactive_3d_plots.Rmd
+++ b/interactive_3d_plots.Rmd
@@ -4,9 +4,12 @@ output: html_document
 ---
 
 ```{r, message=FALSE, warning=FALSE}
-# Installing the package
+# Installing required packages
 if (!require(rgl)){
   BiocManager::install("rgl")  
+}
+if (!require(plotly)){
+  BiocManager::install("plotly")  
 }
 ```
 
