--- a/14b_beta_diversity.Rmd
+++ b/14b_beta_diversity.Rmd
@@ -283,7 +283,7 @@ plot <-plotReducedDim(tse_Genus,"PCoA_BC", colour_by = "most_abundant") +
 plot
 ```
 
-Note: A 3D interactive version of the earlier plot can be found at [link](https://microbiome.github.io/OMA/interactive_3d_plots.html).
+Note: A 3D interactive version of the earlier plot can be found from [here](https://microbiome.github.io/OMA/interactive-3d-plots.html).
 
 Similarly lets visualize and compare the alcohol sub-polulation.
 ```{r}
