Book fixes and clean-up.

--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -1,4 +1,4 @@
-
+# Alpha diversity
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
@@ -22,9 +22,6 @@ data("GlobalPatterns")
 se <- GlobalPatterns
 ```
 
-
-
-## Alpha diversity
 
 **_Alpha diversity_**, also sometimes interchangeably used with the
 term **_species diversity_**, summarizes the distribution of species
@@ -63,13 +60,13 @@ by species abundances.
   dominance is obtained when one or few species have a high share of
   the total species abundance in the community.  
   
-### Estimating alpha diversity
+## Estimating alpha diversity
 
 Alpha diversity can be estimated with wrapper functions that interact
 with other packages implementing the calculation, such as _`vegan`_
 [@R-vegan].
 
-#### Richness  
+### Richness  
 
 Richness gives the number of features present within a community and can be calculated with `estimateRichness`. Each of the estimate diversity/richness/evenness/dominance functions adds the calculated measure(s) to the `colData` of the `SummarizedExperiment` under the given column `name`. Here, we calculate `observed` features as a measure of richness.     
 
@@ -95,7 +92,7 @@ plotColData(se,
 
 ```
 
-#### Diversity  
+### Diversity  
 
 **Non-Phylogenetic measures**  
 The main function, `estimateDiversity`, calculates the selected
@@ -160,7 +157,7 @@ head(colData(se)$faith)
 
 ```
 
-#### Evenness  
+### Evenness  
 
 Evenness can be calculated with `estimateEvenness`.  
 
@@ -172,7 +169,7 @@ head(colData(se)$simpson)
 ```
 
 
-#### Dominance  
+### Dominance  
 
 Dominance can be calculated with `estimateDominance`. Here, the `Relative index` is calculated which is the relative abundance of the most dominant species in the sample.   
 
@@ -184,14 +181,14 @@ se <- estimateDominance(se,
 head(colData(se)$relative)
 ```
 
-#### Rarity  
+### Rarity  
 TODO...
 ```{r}
 
 ```
 
 
-### Visualize alpha diversities  
+## Visualize alpha diversities  
 
 A plot comparing all the diversity measures calculated above and stored in `colData` can then be constructed directly.  
 ```{r plot-all-diversities}
@@ -202,4 +199,10 @@ plots <- lapply(c("observed", "shannon","simpson", "relative", "faith"),
                 colour_by = "SampleType")
 plots <- lapply(plots,"+", theme(axis.text.x = element_text(angle=45,hjust=1)))
 ggpubr::ggarrange(plotlist = plots, nrow = 2, ncol = 3, common.legend = TRUE, legend = "right")
+```
+
+## Session Info {-}
+
+```{r sessionInfo, echo=FALSE, results='asis'}
+prettySessionInfo()
 ```
