--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -1,4 +1,4 @@
-# Taxonomic information {#taxonomic-information}
+# Taxonomic Information {#taxonomic-information}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
