--- a/15_beta_diversity.Rmd
+++ b/15_beta_diversity.Rmd
@@ -2,7 +2,7 @@
 library(rebook)
 chapterPreamble()
 ```
-# Beta diversity
+# Beta Diversity
 
 Where alpha diversity focuses on community variation within a
 community (sample), beta diversity quantifies (dis-)similarites
