--- a/18_timeseries.Rmd
+++ b/18_timeseries.Rmd
@@ -1,4 +1,4 @@
-# Microbiome time series {#microbiome-timeseries}
+# Microbiome Time Series {#microbiome-timeseries}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
