--- a/17_differential_abundance.Rmd
+++ b/17_differential_abundance.Rmd
@@ -1,4 +1,4 @@
-# Differential abundance {#differential-abundance}
+# Differential Abundance {#differential-abundance}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
