--- a/19_multitable.Rmd
+++ b/19_multitable.Rmd
@@ -1,4 +1,4 @@
-# Representation of multiple data tables {#multitable}
+# Representation of Multiple Data Tables {#multitable}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
