--- a/90_example_data.Rmd
+++ b/90_example_data.Rmd
@@ -1,6 +1,6 @@
 # (PART) Appendix {-}
 
-# Example data {#example-data}
+# Example Data {#example-data}
 
 ```{r setup, echo=FALSE, results="asis"}
 library(rebook)
