--- a/interactive_3d_plots.Rmd
+++ b/interactive_3d_plots.Rmd
@@ -16,7 +16,7 @@ library(rgl)
 knitr::knit_hooks$set(webgl = hook_webgl)
 ```
 
-# Interactive 3D plots {-}
+# Interactive 3D Plots {-}
 
 In this section we make a 3D version of the earlier [ Visualizing the most dominant genus on PCoA](https://microbiome.github.io/OMA/microbiome-exploration.html#visualizing-the-most-dominant-genus-on-pcoa), with the help of the [plotly](https://plotly.com/r/) R package.
 
