--- a/00_bioc_intro.Rmd
+++ b/00_bioc_intro.Rmd
@@ -12,12 +12,9 @@ It has been constantly deployed in R packages, including the [Bioconductor](http
     
 |   Online Document:
 
-* Hervé Pagès, “A quick overview of the S4 class system”,\
- https://bioconductor.org/packages/release/bioc/vignettes/S4Vectors/inst/doc/S4QuickOverview.pdf
-* Laurent Gatto, “A practical tutorial on S4 programming”,\
- https://bioconductor.org/help/course-materials/2013/CSAMA2013/friday/afternoon/S4-tutorial.pdf
-* John M. Chambers. “How S4 Methods Work”,\
- http://developer.r-project.org/howMethodsWork.pdf
+* Hervé Pagès, [A quick overview of the S4 class system](https://bioconductor.org/packages/release/bioc/vignettes/S4Vectors/inst/doc/S4QuickOverview.pdf).
+* Laurent Gatto, [A practical tutorial on S4 programming](https://bioconductor.org/help/course-materials/2013/CSAMA2013/friday/afternoon/S4-tutorial.pdf)
+* John M. Chambers. [How S4 Methods Work](http://developer.r-project.org/howMethodsWork.pdf)
 
 **Additional useful classes include:**
 
