--- a/12_quality_control.Rmd
+++ b/12_quality_control.Rmd
@@ -36,19 +36,40 @@ se <- addPerCellQC(se)
 colData(se)
 ```
 
-The distribution of calculated library sizes can be visualized as a histogram.
+The distribution of calculated library sizes can be visualized as a
+histogram (left), or by sorting the samples by library size (right).
 
 ```{r plot-viz-lib-size-1, fig.width=8, fig.height=4, fig.cap="Library size distribution."}
 library(ggplot2)
-ggplot(as.data.frame(colData(se))) +
-    geom_histogram(aes(x = sum), color = "black", fill = "gray", bins = 30) +
-    labs(x = "Library size", y = "Frequency") +
-    theme_bw() +
-    theme(panel.grid.major = element_blank(), # Removes the grid
+
+p1 <- ggplot(as.data.frame(colData(se))) +
+        geom_histogram(aes(x = sum), color = "black", fill = "gray", bins = 30) +
+        labs(x = "Library size", y = "Frequency (n)") + 
+        # scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), 
+        # labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+        theme_bw() +
+        theme(panel.grid.major = element_blank(), # Removes the grid
           panel.grid.minor = element_blank(),
           panel.border = element_blank(),
           panel.background = element_blank(),
           axis.line = element_line(colour = "black")) # Adds y-axis
+
+library(dplyr)
+df <- as.data.frame(colData(se)) %>%
+        arrange(sum) %>%
+        mutate(index = 1:n())
+p2 <- ggplot(df, aes(y = index, x = sum/1e6)) +
+        geom_point() +	
+        labs(x = "Library size (million reads)", y = "Sample index") +	
+        theme_bw() +
+        theme(panel.grid.major = element_blank(), # Removes the grid
+          panel.grid.minor = element_blank(),
+          panel.border = element_blank(),
+          panel.background = element_blank(),
+          axis.line = element_line(colour = "black")) # Adds y-axis
+
+library(patchwork)
+p1 + p2
 ```
 
 Library sizes - and other variables from `colData` - can be also visualized by using 
