--- a/99_interactive_3d_plots.Rmd
+++ b/99_interactive_3d_plots.Rmd
@@ -1,4 +1,8 @@
+# (PART) Appendix {-}
 
+# Extras {#extras}
+
+## Interactive 3D Plots
 
 ```{r, message=FALSE, warning=FALSE}
 # Installing required packages
@@ -16,7 +20,6 @@ library(rgl)
 knitr::knit_hooks$set(webgl = hook_webgl)
 ```
 
-# Interactive 3D Plots {-}
 
 In this section we make a 3D version of the earlier [ Visualizing the most dominant genus on PCoA](https://microbiome.github.io/OMA/microbiome-exploration.html#visualizing-the-most-dominant-genus-on-pcoa), with the help of the [plotly](https://plotly.com/r/) R package.
 
