Added log-modulo skewness to alpha div visualization

--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -203,11 +203,12 @@ head(colData(se)$log_modulo_skewness)
 
 A plot comparing all the diversity measures calculated above and stored in `colData` can then be constructed directly.  
 ```{r plot-all-diversities}
-plots <- lapply(c("observed", "shannon","simpson", "relative", "faith"),
+plots <- lapply(c("observed", "shannon","simpson", "relative", "faith","log_modulo_skewness"),
                 plotColData,
                 object = se,
                 x = "SampleType",
                 colour_by = "SampleType")
+
 plots <- lapply(plots,"+", theme(axis.text.x = element_text(angle=45,hjust=1)))
 ggpubr::ggarrange(plotlist = plots, nrow = 2, ncol = 3, common.legend = TRUE, legend = "right")
 ```
