--- a/01_introduction.Rmd
+++ b/01_introduction.Rmd
@@ -317,7 +317,7 @@ GlobalPatterns_phyloseq2
 
 ```{r, message=FALSE}
 library(mia)
-data("GlobalPatterns")
+data("GlobalPatterns", package = "mia")
 se <- GlobalPatterns 
 se
 ```
