Adding plotAbundanceDensity example.

--- a/13_microbiome_exploration.Rmd
+++ b/13_microbiome_exploration.Rmd
@@ -159,6 +159,33 @@ plotRowTree(x[rowData(x)$Phylum %in% top_phyla_mean,],
             node_colour_by = "prevalence")
 ```
 
+## Abundance
+
+Another approach for exploring data is by visualizing abundance. `miaViz` offers
+the function `plotAbundanceDensity` where most abundant taxa can be plotted 
+including several options.
+
+In the following few demonstrations are shown, using the 
+[Lahti L et al. (2014)](https://doi.org/10.1038/ncomms5344) dataset; `atlas1006`.
+
+A Jitter plot using the top 25 taxa as a default value could be produced as follows: 
+
+```{r, warning=FALSE, message=FALSE}
+tse <- microbiomeDataSets::atlas1006()
+plotAbundanceDensity(tse, abund_values = "counts")
+```
+
+Relative abundance values for top 5 taxa for instance can be visualized as a
+density plot over a log scaled axis, using "nationality" as an overlaying information:
+
+```{r, warning=FALSE, message=FALSE}
+# Counts relative abundances
+tse <- transformSamples(tse, method = "relabundance")
+
+plotAbundanceDensity(tse, layout = "density", abund_values = "relabundance",
+                     n = 5, colour_by="nationality", alpha=1/10 ) +
+    scale_x_log10()
+```
 ## Session Info {-}
 
 ```{r sessionInfo, echo=FALSE, results='asis'}
