Fix loading data

--- a/13_microbiome_exploration.Rmd
+++ b/13_microbiome_exploration.Rmd
@@ -171,7 +171,8 @@ In the following few demonstrations are shown, using the
 A Jitter plot using the top 25 taxa as a default value could be produced as follows: 
 
 ```{r, warning=FALSE, message=FALSE}
-tse <- microbiomeDataSets::atlas1006()
+library(microbiomeDataSets)
+tse <- atlas1006()
 plotAbundanceDensity(tse, abund_values = "counts")
 ```
 
