Data import fix.

--- a/13_microbiome_exploration.Rmd
+++ b/13_microbiome_exploration.Rmd
@@ -166,13 +166,13 @@ the function `plotAbundanceDensity` where most abundant taxa can be plotted
 including several options.
 
 In the following few demonstrations are shown, using the 
-[Lahti L et al. (2014)](https://doi.org/10.1038/ncomms5344) dataset; `atlas1006`.
+[Lahti L et al. (2014)](https://doi.org/10.1038/ncomms5344) dataset.
 
 A Jitter plot using the top 25 taxa as a default value could be produced as follows: 
 
 ```{r, warning=FALSE, message=FALSE}
 library(microbiomeDataSets)
-tse <- atlas1006()
+tse <- LahtiWAData()
 plotAbundanceDensity(tse, abund_values = "counts")
 ```
 
