--- a/13_microbiome_exploration.Rmd
+++ b/13_microbiome_exploration.Rmd
@@ -168,21 +168,27 @@ including several options.
 In the following few demonstrations are shown, using the 
 [Lahti L et al. (2014)](https://doi.org/10.1038/ncomms5344) dataset.
 
-A Jitter plot using the top 25 taxa as a default value could be produced as follows: 
+A Jitter plot based on relative abundance data, similar to the one presented at 
+[Salosensaari et al. 2021](https://www.nature.com/articles/s41467-021-22962-y) 
+supplementary figure 1, could be visualized as follows: 
 
 ```{r, warning=FALSE, message=FALSE}
+# Loading data
 library(microbiomeDataSets)
-tse <- LahtiWAData()
-plotAbundanceDensity(tse, abund_values = "counts")
+tse <- atlas1006()
+
+# Counts relative abundances
+tse <- transformSamples(tse, method = "relabundance")
+
+plotAbundanceDensity(tse, layout = "jitter", abund_values = "relabundance",
+                     n = 40, point_size=1, point_shape=19, alpha=0.1) + 
+    scale_x_log10(label=scales::percent)
 ```
 
 Relative abundance values for top 5 taxa for instance can be visualized as a
 density plot over a log scaled axis, using "nationality" as an overlaying information:
 
 ```{r, warning=FALSE, message=FALSE}
-# Counts relative abundances
-tse <- transformSamples(tse, method = "relabundance")
-
 plotAbundanceDensity(tse, layout = "density", abund_values = "relabundance",
                      n = 5, colour_by="nationality", alpha=1/10 ) +
     scale_x_log10()
