--- a/13_microbiome_exploration.Rmd
+++ b/13_microbiome_exploration.Rmd
@@ -181,7 +181,7 @@ tse <- atlas1006()
 tse <- transformSamples(tse, method = "relabundance")
 
 plotAbundanceDensity(tse, layout = "jitter", abund_values = "relabundance",
-                     n = 40, point_size=1, point_shape=19, alpha=0.1) + 
+                     n = 40, point_size=1, point_shape=19, point_alpha=0.1) + 
     scale_x_log10(label=scales::percent)
 ```
 
