--- a/13_microbiome_exploration.Rmd
+++ b/13_microbiome_exploration.Rmd
@@ -190,7 +190,7 @@ density plot over a log scaled axis, using "nationality" as an overlaying inform
 
 ```{r, warning=FALSE, message=FALSE}
 plotAbundanceDensity(tse, layout = "density", abund_values = "relabundance",
-                     n = 5, colour_by="nationality", alpha=1/10 ) +
+                     n = 5, colour_by="nationality", point_alpha=1/10 ) +
     scale_x_log10()
 ```
 ## Session Info {-}
