Added front page figure

--- a/index.Rmd
+++ b/index.Rmd
@@ -49,3 +49,17 @@ knitr::opts_chunk$set(
   dpi=300
 )
 ```
+
+```{js, echo = FALSE}
+// This block adds image to the front page
+title=document.getElementById('header');
+title.innerHTML = title.innerHTML + 
+
+'<img src="https://user-images.githubusercontent.com/60338854/121848694-\
+1072a480-ccf3-11eb-9af2-7fdefd8d1794.png" alt="ML4microbiome" width="50%"/>' +
+
+'<p style="font-size:12px">Figure source: Moreno-Indias _et al_. (2021) \
+<a href="https://doi.org/10.3389/fmicb.2021.635781">Statistical and \
+Machine Learning Techniques in Human Microbiome Studies: Contemporary \
+Challenges and Solutions</a>. Frontiers in Microbiology 12:11.</p>'
+```
