--- a/index.Rmd
+++ b/index.Rmd
@@ -55,8 +55,8 @@ knitr::opts_chunk$set(
 title=document.getElementById('header');
 title.innerHTML = title.innerHTML + 
 
-'<img src="https://user-images.githubusercontent.com/60338854/121848694-\
-1072a480-ccf3-11eb-9af2-7fdefd8d1794.png" alt="ML4microbiome" width="50%"/>' +
+'<img src="https://user-images.githubusercontent.com/60338854/128359392\
+-6feef8df-30e9-4ea0-ae3b-4bb619d746ed.png" alt="Microbiome" width="50%"/>' +
 
 '<p style="font-size:12px">Figure source: Moreno-Indias _et al_. (2021) \
 <a href="https://doi.org/10.3389/fmicb.2021.635781">Statistical and \
