--- a/index.Rmd
+++ b/index.Rmd
@@ -58,7 +58,7 @@ title.innerHTML = title.innerHTML +
 '<img src="https://user-images.githubusercontent.com/60338854/128359392\
 -6feef8df-30e9-4ea0-ae3b-4bb619d746ed.png" alt="Microbiome" width="50%"/>' +
 
-'<p style="font-size:12px">Figure source: Moreno-Indias _et al_. (2021) \
+'<p style="font-size:12px">Figure source: Moreno-Indias <i>et al</i>. (2021) \
 <a href="https://doi.org/10.3389/fmicb.2021.635781">Statistical and \
 Machine Learning Techniques in Human Microbiome Studies: Contemporary \
 Challenges and Solutions</a>. Frontiers in Microbiology 12:11.</p>'
